# qmlDemo

./: .gitignore  CMakeLists.txt  README.md  barcode.cc  barcode.h  main.cc  main.qml  qml.qrc
